<resources>
    <string name="app_name">GYM</string>
    <string name="facebook_application_id">714064082770244</string>
    <string name="fb_login_protocol_scheme">fb714064082770244</string>
    <string name="GYM">GYM</string>
    <string name="App">App</string>
    <string name="DummyText">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
    </string>
    <string name="Skip">Skip</string>
    <string name="Next">Next</string>
    <string name="splash_title">title</string>
    <string name="getStarted">Get Started</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="OR">OR</string>
    <string name="welcome">Welcome</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="checkBox"><![CDATA[I agree to the Terms & Conditions]]></string>
    <string name="Resgister">Register</string>
    <string name="alreadyTxt">Already have an account?</string>
    <string name="userName">User Name</string>
    <string name="forgotPass">Forgot Password ?</string>
    <string name="LogIn">LogIn</string>
    <string name="haveAcc">Don\'t have an account?</string>
    <string name="forPass">Forgot Password</string>
    <string name="passRecovery">Password Recovery</string>
    <string name="recoveryTxt">Type your mobile number to recover your password</string>
    <string name="verification">Verification</string>
    <string name="VCode">Verification Code</string>
    <string name="Verify">Verify</string>
    <string name="RecentPassword">Recent Password</string>
    <string name="ChangePassword">Change Password</string>
    <string name="changePassTxt">Please enter and confirm your new password</string>
    <string name="newPassword">New Password</string>
    <string name="resetPass">Reset Password</string>
    <string name="UpdateSuccessfully">Update Successfully</string>
    <string name="update">Password successfully created</string>
    <string name="GoToHome">Go to Home</string>
    <string name="Crossfit">Crossfit</string>
    <string name="excercies_min">excercies_min</string>
    <string name="star">*</string>
    <string name="HealthyHabits">Healthy habits</string>
    <string name="ActivityTracker">Activity Tracker</string>
    <string name="PersonalTrainer">Personal Trainer</string>
    <string name="play_sport_with">Play sport with</string>
    <string name="get_started">Get Started</string>
    <string name="name_of_course">jumb to jumb</string>
    <string name="cost_of_course">$15.00</string>
    <string name="courses">Courses</string>
    <string name="see_all">See All</string>
    <string name="no_courses_added">No Courses Added !</string>
    <string name="add_course">Add A Course</string>
    <string name="no_posts_added">No Posts Added!</string>
    <string name="add_post">Add A Post</string>
    <string name="person_name">wejdan murad</string>
    <string name="see_comment">see comments</string>
    <string name="pic" />
    <string name="content">contentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontent</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Send">send</string>
    <string name="blog">Blog</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wejdanmurad">wejdan murad</string>
    <string name="posts">Posts</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="bio">قد نجا من رحل</string>
    <string name="et_bio">Bio</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="gym_user_id">GymUserId</string>
    <string name="bio_txt">bio</string>
    <string name="likes">likes</string>
    <string name="publish">Publish</string>
    <string name="post_content">add post content</string>
    <string name="create_post">Create Post</string>
    <string name="key_userId">user_id</string>
    <string name="key_userName">user_name</string>
    <string name="key_userPic">user_pic</string>
    <string name="key_userRole">user_role</string>
    <string name="write_comment">write a comment</string>
    <string name="comment">Comment</string>
    <string name="no_sessions">30 sessions</string>
    <string name="dollar_sign"> US$</string>
    <string name="name_course">name of course</string>
    <string name="price_course">price</string>
    <string name="overview">overview about the course</string>
    <string name="create_course">Create Course</string>
    <string name="add_course_photo">add course photo</string>
    <string name="see_sessions">see sessions </string>
    <string name="buy">Buy Now</string>
    <string name="save">save rating</string>
    <string name="rate">rate course</string>
    <string name="no_sessions_added">No sessions added</string>
    <string name="steps">Steps</string>
    <string name="breath">Breath</string>
    <string name="add_session">Add Session</string>
    <string name="session_name">name of session</string>
    <string name="session_breath">Breath</string>
    <string name="session_steps">Steps</string>
    <string name="no_comments">no Comments</string>
    <string name="search_for_courses">search for courses</string>
    <string name="my_courses">my courses</string>
    <string name="admin">admin</string>
    <string name="member">member</string>
    <string name="googlepay_status_unavailable">Unfortunately, Google Pay is not available on this device.</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="gateway_replace_name_example">"Gateway name set to \"example\" - please modify Constants.java and replace it with your own gateway."</string>
    <string name="checkout_item_description">Description</string>
</resources>